--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
     "require": {
         "phpunit/phpunit": "^9.5",
         "rhuangabrielsantos/simple-routes": "^2.0",
-        "beyondcode/expose": "^1.5"
+        "beyondcode/expose": "^1.5",
+        "monolog/monolog": "^2.2"
     },
     "autoload": {
         "psr-4": {
